Added `black` formatter to dev deps
Added `black[jupyter]` to dev dependencies and applied formatting to the
demo notebooks for readability.

--- a/notebooks/multiseason_model.ipynb
+++ b/notebooks/multiseason_model.ipynb
@@ -25,6 +25,7 @@
    "source": [
     "# Add graphviz to path\n",
     "import os\n",
+    "\n",
     "os.environ[\"PATH\"] = os.environ[\"PATH\"] + \":/opt/homebrew/bin\"\n",
     "\n",
     "# External dependency imports\n",
@@ -497,7 +498,9 @@
     "chains = 8\n",
     "samples = 1000 * chains\n",
     "with model:\n",
-    "    trace = pm.sample(draws=samples, tune=samples, chains=chains, cores=2, random_seed=123)"
+    "    trace = pm.sample(\n",
+    "        draws=samples, tune=samples, chains=chains, cores=2, random_seed=123\n",
+    "    )"
    ]
   },
   {
@@ -725,7 +728,9 @@
     "\n",
     "for i in range(stacked.sizes[\"sample\"]):\n",
     "    for j in range(len(seasons)):\n",
-    "        model_dist[i,:,j] = expit(stacked.k.values[j,i]) * expit(stacked.r.values[0,i] * (sort_order - stacked.s.values[0,i]))\n",
+    "        model_dist[i, :, j] = expit(stacked.k.values[j, i]) * expit(\n",
+    "            stacked.r.values[0, i] * (sort_order - stacked.s.values[0, i])\n",
+    "        )\n",
     "\n",
     "model_rate_quantiles = np.quantile(model_dist, [0.005, 0.5, 0.995], axis=0)\n",
     "s_median = np.median(stacked.s.values)\n",
@@ -752,19 +757,31 @@
     "fig, axes = plt.subplots(nrows=3, ncols=2, sharex=True, figsize=(12, 8))\n",
     "axes = axes.flatten()\n",
     "\n",
-    "ylim = (0, 1.05*vacc_df[\"rate\"].max().tolist())\n",
+    "ylim = (0, 1.05 * vacc_df[\"rate\"].max().tolist())\n",
     "\n",
     "for i, season in enumerate(seasons):\n",
     "    # Plot the data\n",
     "    idx = vacc_df[\"season\"] == season.encode()\n",
-    "    axes[i].plot(vacc_df[idx][\"time\"], vacc_df[idx][\"rate\"], color=\"orange\", marker=\"o\", linestyle=\"\")\n",
-    "    \n",
+    "    axes[i].plot(\n",
+    "        vacc_df[idx][\"time\"],\n",
+    "        vacc_df[idx][\"rate\"],\n",
+    "        color=\"orange\",\n",
+    "        marker=\"o\",\n",
+    "        linestyle=\"\",\n",
+    "    )\n",
+    "\n",
     "    # Plot the model\n",
-    "    axes[i].plot(sort_order, model_rate_quantiles[1,:,i], color=\"blue\", linestyle=\"-\")\n",
-    "    axes[i].fill_between(sort_order, model_rate_quantiles[0,:,i], model_rate_quantiles[2,:,i], color=\"blue\", alpha=0.4)\n",
+    "    axes[i].plot(sort_order, model_rate_quantiles[1, :, i], color=\"blue\", linestyle=\"-\")\n",
+    "    axes[i].fill_between(\n",
+    "        sort_order,\n",
+    "        model_rate_quantiles[0, :, i],\n",
+    "        model_rate_quantiles[2, :, i],\n",
+    "        color=\"blue\",\n",
+    "        alpha=0.4,\n",
+    "    )\n",
     "    axes[i].axvline(s_median, linestyle=\"--\")\n",
     "    axes[i].axhline(k_median[i], linestyle=\"--\")\n",
-    "    \n",
+    "\n",
     "    # Plot formatting\n",
     "    axes[i].set_ylabel(\"Rate\")\n",
     "    if i in [4, 5]:\n",
