--- a/notebooks/single_curve_model.ipynb
+++ b/notebooks/single_curve_model.ipynb
@@ -25,6 +25,7 @@
    "source": [
     "# Add graphviz to path\n",
     "import os\n",
+    "\n",
     "os.environ[\"PATH\"] = os.environ[\"PATH\"] + \":/opt/homebrew/bin\"\n",
     "\n",
     "# External dependency imports\n",
@@ -67,21 +68,15 @@
    "source": [
     "# Read in the dataset and define some constants\n",
     "vacc_data = read_flu_vacc_data()\n",
-    "national_population = 333.3 # In millions\n",
-    "vacc_data[\"doses\"] = vacc_data[\"doses\"]/national_population\n",
+    "national_population = 333.3  # In millions\n",
+    "vacc_data[\"doses\"] = vacc_data[\"doses\"] / national_population\n",
     "\n",
     "# Plot the data for a quick visual\n",
     "g = sns.lineplot(\n",
-    "    x=vacc_data['sort_order'],\n",
-    "    y=vacc_data['doses'],\n",
-    "    hue=vacc_data['season'],\n",
-    "    marker='o'\n",
+    "    x=vacc_data[\"sort_order\"], y=vacc_data[\"doses\"], hue=vacc_data[\"season\"], marker=\"o\"\n",
     ")\n",
     "handles, labels = g.get_legend_handles_labels()\n",
-    "g.legend(\n",
-    "    handles, \n",
-    "    [\"2018/19\", \"2019/20\", \"2020/21\", \"2021/22\", \"2022/23\", \"2023/24\"]\n",
-    ")\n",
+    "g.legend(handles, [\"2018/19\", \"2019/20\", \"2020/21\", \"2021/22\", \"2022/23\", \"2023/24\"])\n",
     "g.set(xlabel=\"Sort Order\", ylabel=\"Vaccination Rate\")\n",
     "plt.show(g)"
    ]
@@ -121,7 +116,9 @@
     }
    ],
    "source": [
-    "opt_result = modified_logistic_curve_least_squares(vacc_data[\"sort_order\"], vacc_data[\"doses\"])\n",
+    "opt_result = modified_logistic_curve_least_squares(\n",
+    "    vacc_data[\"sort_order\"], vacc_data[\"doses\"]\n",
+    ")\n",
     "for param, estimate in zip([\"r\", \"k\", \"c0\"], opt_result.x):\n",
     "    print(f\"* Estimate for {param} = {estimate:.4f}.\")"
    ]
@@ -144,29 +141,20 @@
    ],
    "source": [
     "# Quickly create some plot data\n",
-    "sort_order = np.linspace(np.min(vacc_data[\"sort_order\"]), np.max(vacc_data[\"sort_order\"]), 1000)\n",
+    "sort_order = np.linspace(\n",
+    "    np.min(vacc_data[\"sort_order\"]), np.max(vacc_data[\"sort_order\"]), 1000\n",
+    ")\n",
     "doses_estimate = modified_logistic_curve(sort_order, *opt_result.x)\n",
     "_, k_hat, c0_hat = opt_result.x\n",
     "\n",
     "# Plot the least squares fit for a quick visual\n",
     "g = sns.lineplot(\n",
-    "    x=vacc_data['sort_order'],\n",
-    "    y=vacc_data['doses'],\n",
-    "    hue=vacc_data['season'],\n",
-    "    marker='o'\n",
+    "    x=vacc_data[\"sort_order\"], y=vacc_data[\"doses\"], hue=vacc_data[\"season\"], marker=\"o\"\n",
     ")\n",
     "handles, labels = g.get_legend_handles_labels()\n",
-    "g.legend(\n",
-    "    handles, \n",
-    "    [\"2018/19\", \"2019/20\", \"2020/21\", \"2021/22\", \"2022/23\", \"2023/24\"]\n",
-    ")\n",
+    "g.legend(handles, [\"2018/19\", \"2019/20\", \"2020/21\", \"2021/22\", \"2022/23\", \"2023/24\"])\n",
     "g = sns.lineplot(\n",
-    "    x=sort_order,\n",
-    "    y=doses_estimate,\n",
-    "    linewidth=2,\n",
-    "    label=\"Model\",\n",
-    "    color=\"black\",\n",
-    "    ax=g\n",
+    "    x=sort_order, y=doses_estimate, linewidth=2, label=\"Model\", color=\"black\", ax=g\n",
     ")\n",
     "g.axhline(y=k_hat, color=\"black\", linestyle=\"-.\", alpha=0.5)\n",
     "g.axvline(x=c0_hat, color=\"black\", linestyle=\"-.\", alpha=0.5)\n",
@@ -251,7 +239,9 @@
     }
    ],
    "source": [
-    "model, trace = modified_logistic_curve_bayes_model(vacc_data[\"sort_order\"], vacc_data[\"doses\"], tune=5000, draws=5000)"
+    "model, trace = modified_logistic_curve_bayes_model(\n",
+    "    vacc_data[\"sort_order\"], vacc_data[\"doses\"], tune=5000, draws=5000\n",
+    ")"
    ]
   },
   {
@@ -515,9 +505,13 @@
     "doses_estimate_dist = np.zeros((stacked.sizes[\"sample\"], len(sort_order)))\n",
     "\n",
     "for i in range(stacked.sizes[\"sample\"]):\n",
-    "    doses_estimate_dist[i,:] = modified_logistic_curve(sort_order, stacked.r.values[i], stacked.k.values[i], stacked.c0.values[i])\n",
+    "    doses_estimate_dist[i, :] = modified_logistic_curve(\n",
+    "        sort_order, stacked.r.values[i], stacked.k.values[i], stacked.c0.values[i]\n",
+    "    )\n",
     "\n",
-    "doses_estimate_dist_summary = np.quantile(doses_estimate_dist, [0.005, 0.1, 0.5, 0.9, 0.995], axis=0)"
+    "doses_estimate_dist_summary = np.quantile(\n",
+    "    doses_estimate_dist, [0.005, 0.1, 0.5, 0.9, 0.995], axis=0\n",
+    ")"
    ]
   },
   {
@@ -540,11 +534,13 @@
     "# Plot the bayes fit for a quick visual\n",
     "g = sns.lineplot(\n",
     "    x=sort_order,\n",
-    "    y=doses_estimate_dist_summary[3,:],\n",
+    "    y=doses_estimate_dist_summary[3, :],\n",
     "    label=\"Median Model\",\n",
-    "    color=\"Black\"\n",
+    "    color=\"Black\",\n",
     ")\n",
-    "g.fill_between(sort_order, doses_estimate_dist_summary[0,:], doses_estimate_dist_summary[4,:])\n",
+    "g.fill_between(\n",
+    "    sort_order, doses_estimate_dist_summary[0, :], doses_estimate_dist_summary[4, :]\n",
+    ")\n",
     "g.set(xlabel=\"Sort Order\", ylabel=\"Vaccination Rate\")\n",
     "plt.show(g)"
    ]
