Swap `pylint` for `ruff`
* Swapped `pylint` for `ruff` for code styling/checking, and
* Used `ruff check --fix` to do autofixes.

--- a/notebooks/flexible_model.ipynb
+++ b/notebooks/flexible_model.ipynb
@@ -25,7 +25,7 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import pymc as pm\n",
-    "from scipy.special import expit, logit\n",
+    "from scipy.special import logit\n",
     "import seaborn as sns\n",
     "\n",
     "# `vaxflux` imports\n",
