Minor edits to pass `ruff check`

--- a/notebooks/age_stratified_model.ipynb
+++ b/notebooks/age_stratified_model.ipynb
@@ -40,7 +40,11 @@
     "import seaborn as sns\n",
     "\n",
     "# `vaxflux` imports\n",
-    "from vaxflux.multilevel_model import *"
+    "from vaxflux.multilevel_model import (\n",
+    "    UptakeModelConfig,\n",
+    "    create_multilevel_model,\n",
+    "    generate_model_outputs,\n",
+    ")"
    ]
   },
   {
@@ -1200,7 +1204,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "vaxflux-TxTkjOEN-py3.12",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
