--- a/notebooks/flexible_model.ipynb
+++ b/notebooks/flexible_model.ipynb
@@ -29,9 +29,9 @@
     "import seaborn as sns\n",
     "\n",
     "# `vaxflux` imports\n",
-    "from vaxflux.curves import *\n",
-    "from vaxflux.data import *\n",
-    "from vaxflux.model import *"
+    "from vaxflux.curves import LogisticIncidenceCurve\n",
+    "from vaxflux.data import create_logistic_sample_dataset\n",
+    "from vaxflux.model import build_model"
    ]
   },
   {
