--- a/notebooks/multiseason_model.ipynb
+++ b/notebooks/multiseason_model.ipynb
@@ -38,7 +38,10 @@
     "\n",
     "# `vaxflux` imports\n",
     "from vaxflux.data import read_flu_vacc_data\n",
-    "from vaxflux.multilevel_model import *"
+    "from vaxflux.multilevel_model import (\n",
+    "    UptakeModelConfig,\n",
+    "    create_multilevel_model,\n",
+    ")"
    ]
   },
   {
@@ -1563,7 +1566,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "vaxflux-TxTkjOEN-py3.12",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
