--- a/notebooks/single_curve_model.ipynb
+++ b/notebooks/single_curve_model.ipynb
@@ -37,7 +37,11 @@
     "\n",
     "# `vaxflux` imports\n",
     "from vaxflux.data import read_flu_vacc_data\n",
-    "from vaxflux.single_curve_model import *"
+    "from vaxflux.single_curve_model import (\n",
+    "    modified_logistic_curve,\n",
+    "    modified_logistic_curve_least_squares,\n",
+    "    modified_logistic_curve_bayes_model,\n",
+    ")"
    ]
   },
   {
