Swap `black` for `ruff format`
Replaced `black` formatter with `ruff` since it is already added to dev
deps for linting and much faster.

--- a/notebooks/age_stratified_model.ipynb
+++ b/notebooks/age_stratified_model.ipynb
@@ -301,7 +301,8 @@
     "# Construct a DataFrame of season starts\n",
     "season_starts = pd.DataFrame(\n",
     "    data=[\n",
-    "        {\"season\": f\"20{i}-{i+1}\", \"start_time\": f\"20{i}-08-15\"} for i in range(10, 24)\n",
+    "        {\"season\": f\"20{i}-{i + 1}\", \"start_time\": f\"20{i}-08-15\"}\n",
+    "        for i in range(10, 24)\n",
     "    ]\n",
     ")\n",
     "season_starts[\"season\"] = season_starts[\"season\"].astype(\"string\")\n",
