--- a/notebooks/multiseason_model.ipynb
+++ b/notebooks/multiseason_model.ipynb
@@ -719,7 +719,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -731,13 +731,13 @@
     "\n",
     "for i in range(stacked.sizes[\"sample\"]):\n",
     "    for j in range(len(seasons)):\n",
-    "        model_dist[i, :, j] = expit(stacked.k.values[j, i]) * expit(\n",
-    "            stacked.r.values[0, i] * (sort_order - stacked.s.values[0, i])\n",
+    "        model_dist[i, :, j] = expit(stacked.k.values[j, i]) * expit(  # noqa: PD011\n",
+    "            stacked.r.values[0, i] * (sort_order - stacked.s.values[0, i])  # noqa: PD011\n",
     "        )\n",
     "\n",
     "model_rate_quantiles = np.quantile(model_dist, [0.005, 0.5, 0.995], axis=0)\n",
-    "s_median = np.median(stacked.s.values)\n",
-    "k_median = np.median(expit(stacked.k.values), axis=1)"
+    "s_median = np.median(stacked.s.values)  # noqa: PD011\n",
+    "k_median = np.median(expit(stacked.k.values), axis=1)  # noqa: PD011"
    ]
   },
   {
@@ -1474,7 +1474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1486,13 +1486,13 @@
     "\n",
     "for i in range(stacked.sizes[\"sample\"]):\n",
     "    for j in range(len(seasons)):\n",
-    "        model_dist[i, :, j] = expit(stacked.k.values[j, i]) * expit(\n",
-    "            stacked.r.values[j, i] * (sort_order - stacked.s.values[j, i])\n",
+    "        model_dist[i, :, j] = expit(stacked.k.values[j, i]) * expit(  # noqa: PD011\n",
+    "            stacked.r.values[j, i] * (sort_order - stacked.s.values[j, i])  # noqa: PD011\n",
     "        )\n",
     "\n",
     "model_rate_quantiles = np.quantile(model_dist, [0.005, 0.5, 0.995], axis=0)\n",
-    "s_median = np.median(stacked.s.values)\n",
-    "k_median = np.median(expit(stacked.k.values), axis=1)"
+    "s_median = np.median(stacked.s.values)  # noqa: PD011\n",
+    "k_median = np.median(expit(stacked.k.values), axis=1)  # noqa: PD011"
    ]
   },
   {
@@ -1580,7 +1580,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.10.14"
   }
  },
  "nbformat": 4,
