Add 'FURB' and 'RUF' ruff lint rules
Added refurb and ruff specific linting rules including minor code
changes to pass these new additions.

--- a/notebooks/multiseason_model.ipynb
+++ b/notebooks/multiseason_model.ipynb
@@ -736,8 +736,8 @@
     "        )\n",
     "\n",
     "model_rate_quantiles = np.quantile(model_dist, [0.005, 0.5, 0.995], axis=0)\n",
-    "s_median = np.median(stacked.s.values)  # noqa: PD011\n",
-    "k_median = np.median(expit(stacked.k.values), axis=1)  # noqa: PD011"
+    "s_median = np.median(stacked.s.values)\n",
+    "k_median = np.median(expit(stacked.k.values), axis=1)"
    ]
   },
   {
@@ -1491,8 +1491,8 @@
     "        )\n",
     "\n",
     "model_rate_quantiles = np.quantile(model_dist, [0.005, 0.5, 0.995], axis=0)\n",
-    "s_median = np.median(stacked.s.values)  # noqa: PD011\n",
-    "k_median = np.median(expit(stacked.k.values), axis=1)  # noqa: PD011"
+    "s_median = np.median(stacked.s.values)\n",
+    "k_median = np.median(expit(stacked.k.values), axis=1)"
    ]
   },
   {
