Address ruff lint rule 'RUF005'

--- a/notebooks/age_stratified_model.ipynb
+++ b/notebooks/age_stratified_model.ipynb
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -213,7 +213,7 @@
     "\n",
     "columns = vacc_df.columns.tolist()\n",
     "vacc_df[\"name\"] = vacc_df[\"NAME\"].astype(\"string\")\n",
-    "vacc_df = vacc_df[[\"name\"] + columns[1:]]\n",
+    "vacc_df = vacc_df[[\"name\", *columns[1:]]]\n",
     "vacc_df[\"end_date\"] = pd.to_datetime(vacc_df[\"end_date\"])\n",
     "vacc_df[\"age_group\"] = vacc_df[\"age_group\"].astype(\"string\")\n",
     "vacc_df[\"USPS\"] = vacc_df[\"USPS\"].astype(\"string\")\n",
