--- a/notebooks/uptake_model.ipynb
+++ b/notebooks/uptake_model.ipynb
@@ -13,7 +13,6 @@
     "\n",
     "# Imports\n",
     "from datetime import date\n",
-    "from pprint import pprint\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
@@ -81,10 +80,14 @@
    "source": [
     "season_ranges = [\n",
     "    SeasonRange(\n",
-    "        season=\"2022/2023\", start_date=date(2022, 9, 5), end_date=date(2023, 4, 30)\n",
+    "        season=\"2022/2023\",\n",
+    "        start_date=date(2022, 9, 5),\n",
+    "        end_date=date(2023, 4, 30),\n",
     "    ),\n",
     "    SeasonRange(\n",
-    "        season=\"2023/2024\", start_date=date(2023, 9, 4), end_date=date(2024, 4, 28)\n",
+    "        season=\"2023/2024\",\n",
+    "        start_date=date(2023, 9, 4),\n",
+    "        end_date=date(2024, 4, 28),\n",
     "    ),\n",
     "]\n",
     "date_ranges = daily_date_ranges(season_ranges, range_days=6)"
@@ -694,9 +697,7 @@
      ]
     }
    ],
-   "source": [
-    "pprint(model.coordinates())"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -852,7 +853,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -940,12 +941,12 @@
     }
    ],
    "source": [
-    "model._model"
+    "model._model  # noqa: SLF001"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2335,7 +2336,7 @@
     }
    ],
    "source": [
-    "pm.model_to_graphviz(model._model)"
+    "pm.model_to_graphviz(model._model)  # noqa: SLF001"
    ]
   },
   {
@@ -5783,7 +5784,7 @@
    "outputs": [],
    "source": [
     "adult_male_df = adult_male_df.reset_index().sort_values(\n",
-    "    by=[\"season_2022_2023_dates\", \"draw\"]\n",
+    "    by=[\"season_2022_2023_dates\", \"draw\"],\n",
     ")\n",
     "adult_male_df[\"Prevalence20222023SexMaleAgeAdult\"] = adult_male_df.groupby(\"draw\")[\n",
     "    \"Incidence20222023SexMaleAgeAdult\"\n",
@@ -6470,7 +6471,8 @@
     "    x=\"date\",\n",
     "    y=\"incidence\",\n",
     "    hue=incidence_df[incidence_df[\"season\"] == \"2022/2023\"][[\"sex\", \"age\"]].apply(\n",
-    "        tuple, axis=1\n",
+    "        tuple,\n",
+    "        axis=1,\n",
     "    ),\n",
     "    palette=\"crest\",\n",
     ")\n",
@@ -7173,7 +7175,8 @@
     "    x=\"date\",\n",
     "    y=\"prevalence\",\n",
     "    hue=incidence_df[incidence_df[\"season\"] == \"2022/2023\"][[\"sex\", \"age\"]].apply(\n",
-    "        tuple, axis=1\n",
+    "        tuple,\n",
+    "        axis=1,\n",
     "    ),\n",
     "    palette=\"crest\",\n",
     ")\n",
@@ -7917,7 +7920,7 @@
     "observations = observations.drop(columns=[\"prevalence\"])\n",
     "observations = (\n",
     "    observations.groupby(\n",
-    "        [\"season\", \"age\", \"sex\", pd.Grouper(key=\"date\", freq=\"W-SUN\")]\n",
+    "        [\"season\", \"age\", \"sex\", pd.Grouper(key=\"date\", freq=\"W-SUN\")],\n",
     "    )[\"incidence\"]\n",
     "    .sum()\n",
     "    .reset_index()\n",
@@ -13883,7 +13886,7 @@
     "        summary_posterior_df.columns[-3]: \"mean\",\n",
     "        summary_posterior_df.columns[-2]: \"lower\",\n",
     "        summary_posterior_df.columns[-1]: \"upper\",\n",
-    "    }\n",
+    "    },\n",
     ")\n",
     "summary_posterior_df"
    ]
@@ -14130,7 +14133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -14182,7 +14185,7 @@
     "        alpha=0.2,\n",
     "    )\n",
     "\n",
-    "for season, ax in season_axes_map.items():\n",
+    "for ax in season_axes_map.values():\n",
     "    ax.legend()\n",
     "\n",
     "fig.tight_layout()\n",
